--- a/estilo.css
+++ b/estilo.css
@@ -149,7 +149,7 @@ footer{
     width: 100%;
     height: 73px;
     padding: 10px 20px;
-    margin-top: 5%;
+    margin-top: 10vh;
     
     
     
