--- a/docs/estilo.css
+++ b/docs/estilo.css
@@ -70,6 +70,7 @@
     height: 670px;
     border-radius: 50px;
     margin-top: 70px;
+    margin-bottom: 50px;
     
     
 }
@@ -91,6 +92,7 @@
     border-radius: 50px;
     margin-top: 70px;
     justify-content: space-around;
+    margin-bottom: 50px;
     
 }
 
@@ -149,11 +151,7 @@ footer{
     width: 100%;
     height: 73px;
     padding: 10px 20px;
-    margin-top: 10vh;
-    
-    
-    
-
+       
 }
 
 h2{
@@ -185,7 +183,7 @@ h2{
 .maincompyest {
     margin: 0 auto;
     display: block;
-    
+    margin-bottom: 50px;
     background-color: rgba(178, 164, 164, 0.7);
     width: 765px;
     height: 545px;
@@ -193,10 +191,7 @@ h2{
     margin-top: 120px;
     padding-top: 70px;
     padding-left: 30px;
-
-    
-    
-    
+  
 }
 
 
@@ -227,6 +222,7 @@ h2{
     padding-top: 120px;
     padding-left: 50px;
     padding-right: 50px;
+    margin-bottom: 50px;
 
     
     
@@ -243,10 +239,167 @@ h2{
     line-height: normal;
     margin: 30px;
     text-align: left;
-
-
-
 }
 
+@media only screen and (max-width:600px){
+    .navbar{
+        display: grid;
+        width: 100%;
+        align-items: center;
+        height: auto;
+        
+    }
 
+    .main{
+        margin: 0 auto;
+        
+        display: block;
+        text-align: center;
+        background-color: rgba(33, 11, 70, 0.27);
+        width: 300px;
+        height: 200px;
+        border-radius: 50px;
+        margin-top: 70px;
+           
+    }
 
+    img{
+        width: 210px;
+        height: 206px;
+        border-radius: 300px;
+        border: 5px solid rgba(184, 160, 176, 0.95);
+        margin-top: 15px;
+    }
+
+    .boton{
+        background-color: rgba(240, 238, 239, 1);
+        border: none;
+        margin-top: 5px;
+        width: 200px;
+        height: 50px;
+        
+        border-radius:50px;
+        padding: 15px 40px;
+        
+    }
+
+    footer{
+        background-color: rgba(9, 5, 50, 1);
+        width: 100%;
+        height: 40px;
+        padding: 5px 10px;
+        
+           
+    }
+
+    .main{
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+        background-color: rgba(33, 11, 70, 0.27);
+        width: 350px;
+        height: auto;
+        border-radius: 50px;
+        margin-top: 70px;
+        margin-bottom: 70px;
+        
+        
+    }
+
+    .info-content h1{
+      font-size: 30px;
+    
+    }
+
+    .maindatosp{
+    
+        display: block;
+        text-align: center;
+        border-radius: 50px;
+        margin-top: 20px;
+        justify-content: center;
+        margin-bottom: 50px;
+        
+    }
+    
+    .maindatosp div{
+        
+        background-color: rgba(178, 164, 164, 0.7);
+        width: 350px;
+        height: auto;
+        border-radius: 50px;
+        padding-top: 50px;
+        margin-top: 20px;
+        justify-content: center;
+
+    
+    
+    }
+    
+    .maindatosp img{
+        width: 210px;
+        height: 206px;
+        border-radius: 300px;
+        border: 5px solid rgba(184, 160, 176, 0.95);
+        margin-top: 70px;
+        
+       
+    
+    }
+
+    .info-datos h1{
+    
+        font-family: Imprima;
+        font-size: 20px;
+        color: #000;
+        font-style: normal;
+        line-height: normal;
+        margin-left: 30px;
+    }
+    
+    .info-datos h2{
+        
+        font-family: Imprima;
+        font-size: 20px;
+        color: #000;
+        font-style: normal;
+        line-height: normal;
+        margin: 10px;
+    }
+
+    .mainest {
+        margin: 0 auto;
+        display: block;
+        
+        background-color: rgba(178, 164, 164, 0.7);
+        width: 400px;
+        height:auto;
+        margin-top: 70px;
+        padding-top: 30px;
+        padding-left: 50px;
+        padding-right: 50px;
+        margin-bottom: 50px;
+      
+    }
+
+    .maincompyest {
+        margin: 0 auto;
+        display: block;
+        margin-bottom: 50px;
+        background-color: rgba(178, 164, 164, 0.7);
+        width: 400px;
+        height: auto;
+        border-radius: 80px;
+        margin-top: 70px;
+        padding-top: 30px;
+        padding-left: 30px;
+      
+    }
+    
+    
+
+    
+    
+    
+
+}
